--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/node": "20.4.5",
     "@types/react": "18.2.17",
     "@types/react-dom": "18.2.7",
+    "@types/uuid": "^9.0.2",
     "async-mutex": "^0.4.0",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
@@ -28,6 +29,7 @@
     "react-redux": "^8.1.1",
     "react-toastify": "^9.1.3",
     "tailwindcss": "3.3.3",
-    "typescript": "5.1.6"
+    "typescript": "5.1.6",
+    "uuid": "^9.0.0"
   }
 }
